--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "sweetalert2": "5.3.4",
-    "jquery": "3.1.1",
+    "jquery": "2.2.4",
     "materialize": "0.97.7",
     "angular": "1.5.8",
     "angular-animate": "1.5.8",
@@ -16,9 +16,13 @@
     "angular-permission": "4.0.6",
     "angular-localforage": "1.3.1",
     "angular-materialize": "0.2.1",
-    "animate.css": "3.5.2"
+    "animate.css": "3.5.2",
+    "angular-redactor": "1.1.6",
+    "angular-resource": "1.5.8",
+    "ng-file-upload": "9.1.1"
   },
   "resolutions": {
-    "angular": ">=1.4.8"
+    "angular": "1.5.8",
+    "jquery": ">=2.2.4"
   }
 }
