--- a/bower.json
+++ b/bower.json
@@ -3,26 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "sweetalert2": "5.3.4",
-    "jquery": "2.2.4",
-    "materialize": "0.97.7",
-    "angular": "1.5.8",
-    "angular-animate": "1.5.8",
-    "angular-sanitize": "1.5.8",
-    "angular-touch": "1.5.8",
-    "angular-ui-router": "0.3.1",
-    "angular-ui-mask": "1.8.7",
-    "angular-ui-router-anim-in-out": "1.0.2",
-    "angular-permission": "4.0.6",
-    "angular-localforage": "1.3.1",
-    "angular-materialize": "0.2.1",
-    "animate.css": "3.5.2",
-    "angular-redactor": "1.1.6",
-    "angular-resource": "1.5.8",
-    "ng-file-upload": "9.1.1"
-  },
-  "resolutions": {
-    "angular": "1.5.8",
-    "jquery": ">=2.2.4"
+    "gsap": "1.17.0",
+    "cash": "^1.3.5",
+    "components-font-awesome": "^4.7.0"
   }
 }
