--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "gsap": "1.17.0",
     "cash": "^1.3.5",
-    "components-font-awesome": "^4.7.0"
+    "components-font-awesome": "^4.7.0",
+    "trianglify": "^1.0.0"
   }
 }
