--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,14 +8,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceRoot}\\server\\server.js",
-      "cwd": "${workspaceRoot}"
-    },
-    {
-      "type": "node",
-      "request": "attach",
-      "name": "Attach to Process",
-      "port": 5858
+      "program": "${workspaceRoot}/server/server.js"
     }
   ]
 }
